@@ -153,7 +153,9 @@ lazy val parapetNet = project
       "ch.qos.logback" % "logback-classic" % "1.5.6" % Test,
       "org.scalatest" %% "scalatest" % scalaTestVersion % Test
     ),
-    Test / run / javaOptions ++= Seq(
+    Test / fork := true,
+    Test / javaOptions ++= Seq(
+      "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
       "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
       "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
